fixed list alignment

--- a/src/components/Elements/ListElement/ListElementStyle.css
+++ b/src/components/Elements/ListElement/ListElementStyle.css
@@ -4,4 +4,5 @@
   align-items: flex-start;
   margin-bottom: 10px;
   padding: 0px 0.5rem;
+  list-style-position: inside;
 }
